<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AddAlunoActivity">

    <TextView
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/nome_materia"
        android:textSize="12sp"/>

    <EditText android:id="@+id/edittext_nome_aluno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textSize="20sp"/>

    <TextView
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/sexo_aluno"
        android:textSize="12sp"
        />

    <EditText android:id="@+id/edittext_sexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textSize="20sp"
        />
    <TextView
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/escola_aluno"
        android:textSize="12sp"
        />

    <EditText android:id="@+id/edittext_escola"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textSize="20sp"
        />
    <TextView
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/serie_aluno"
        android:textSize="12sp"
        />

    <EditText android:id="@+id/edittext_serie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textSize="20sp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TextView android:id="@+id/media_escola"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/media_escola_aluno"
                android:textSize="12sp"
                />

            <EditText android:id="@+id/edittext_mediaescola"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="0.0"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textSize="30sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TextView android:id="@+id/media_pessoal"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/media_pessoal_aluno"
                android:textSize="12sp"
                />

            <EditText android:id="@+id/edittext_mediapessoal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="0.0"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textSize="30sp"
                />

        </LinearLayout>


    </LinearLayout>

    <Button android:id="@+id/salvar_aluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:onClick="salvarAluno"
        android:text="@string/dialog_option_save"
        />


</LinearLayout>
